[package]
name = "httptrace"
version = "0.1.0"
edition = "2024"

[dependencies]
hickory-resolver = { version = "0.25.2", features = ["tokio"] }
http = "1.3.1"
thiserror = "2.0.12"
rustls = "0.23.27"
tokio = { version = "1.45.0", features = ["rt", "net", "fs"] }
tokio-rustls = { version = "0.26.2", features = [
    "ring",
], default-features = false }
hyper = { version = "1.6.0", features = ["client", "http1", "http2"] }
bytes = "1.10.1"
pin-project-lite = "0.2.16"
http-body-util = "0.1.3"
futures-util = "0.3.31"
sync_wrapper = { version = "1.0.2", features = ["futures"] }
http-body = "1.0.1"
arc-swap = "1.7.1"
